[project]
name = "labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=1.2.3",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
]
